--- a/src/frontend/templates/frontend/index.html
+++ b/src/frontend/templates/frontend/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://https://bootswatch.com/4/pulse/bootstrap.min.css"
+    <link rel="stylesheet" href="https://bootswatch.com/4/cosmo/bootstrap.min.css">
     <title>Lead Manager</title>
 </head>
 <body>
